force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/skilljar__Published_Path_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Published Path Enrollment</label>
    <nameField>
        <label>Published Path Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Published Path Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>