force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/fields/skilljar__Contact__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Published Path Enrollments</relationshipLabel>
    <relationshipName>Published_Path_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>