force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/fields/skilljar__Path_Progress__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Path_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Path Progress</label>
    <referenceTo>skilljar__Path_Progress__c</referenceTo>
    <relationshipLabel>Published Path Enrollments</relationshipLabel>
    <relationshipName>Published_Path_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>