force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/fields/skilljar__Published_Path__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Published_Path__c</fullName>
    <label>Published Path</label>
    <referenceTo>skilljar__Published_Path__c</referenceTo>
    <relationshipLabel>Published Path Enrollments</relationshipLabel>
    <relationshipName>Published_Path_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>