force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/fields/skilljar__Purchase_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase_Currency_Code__c</fullName>
    <label>Purchase Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>