force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/fields/skilljar__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>