force-app/main/default/objects/skilljar__Published_Path_Enrollment__c/fields/skilljar__Student__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Student__c</fullName>
    <label>Student</label>
    <referenceTo>skilljar__Student__c</referenceTo>
    <relationshipLabel>Published Path Enrollments</relationshipLabel>
    <relationshipName>Published_Path_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>